syntax = "proto3";
package squad.liquidstaking.v1beta1;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "squad/liquidstaking/v1beta1/liquidstaking.proto";
import "gogoproto/gogo.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/cosmosquad-labs/squad/x/liquidstaking/types";

// Query defines the gRPC query service for the liquidstaking module.
service Query {
  // Params returns parameters of the liquidstaking module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get                                           = "/squad/liquidstaking/v1beta1/params";
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Returns all parameters of the liquid staking module.";
  external_docs: {
  url:
    "https://github.com/b-harvest/gravity-dex-zone/x/liquidstaking/spec/07_params.md";
  description:
    "Find out more about the params";
  }
  };
}
// LiquidValidators returns liquid validators with states of the liquidstaking module.
rpc LiquidValidators(QueryLiquidValidatorsRequest) returns (QueryLiquidValidatorsResponse) {
  option (google.api.http).get                                           = "/squad/liquidstaking/v1beta1/validators";
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
    description: "Returns all liquid validators of the liquid staking module.";
external_docs: {
url:
  "https://github.com/b-harvest/gravity-dex-zone/x/liquidstaking/spec";
description:
  "Find out more about the liquid validators";
}
};
}

// States returns states of the liquidstaking module.
rpc States(QueryStatesRequest) returns (QueryStatesResponse) {
  option (google.api.http).get                                           = "/squad/liquidstaking/v1beta1/states";
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
    description: "Returns states of the liquid staking module.";
external_docs: {
url:
  "https://github.com/b-harvest/gravity-dex-zone/x/liquidstaking/spec";
description:
  "Find out more about the liquid staking";
}
};
}
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryLiquidValidatorsRequest is the request type for the Query/LiquidValidators RPC method.
message QueryLiquidValidatorsRequest {
  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryLiquidValidatorsResponse is the response type for the Query/LiquidValidators RPC method.
message QueryLiquidValidatorsResponse {
  repeated LiquidValidatorState liquid_validators = 1 [(gogoproto.nullable) = false];

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryStatesRequest is the request type for the Query/States RPC method.
message QueryStatesRequest {}

// QueryStatesResponse is the response type for the Query/States RPC method.
message QueryStatesResponse {
  NetAmountState net_amount_state = 1 [(gogoproto.nullable) = false];
}
